# ElderlyManagement

./: CMakeLists.txt  README.md  bus.c  bus.h  cleanup_l.sh  cleanup_w.bat  house.c  house.h  main.c  members.c  members.h  menu.c  menu.h  poetry.c  poetry.h  save.c  save.h  servants.c  servants.h  ui.c  ui.h  utils.c  utils.h  venue.c  venue.h
